[tool.poetry]
name = "distributed-system-samples"
version = "0.1.0"
description = ""
authors = ["huangkai <h1770360848@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
